--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                         <a href="#">
                             <li>FAQ</li>
                         </a>
+                        <a href="#">Signin/login</a>
                         <li class="dropdown_main"><i class="fas fa-globe"></i> <span> EN <i
                                     class="fas fa-sort-down"></i></span></li>
                     </ul>
