--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <li><a href="#">DOWNLOAD</a></li>
                 <li><a href="#">SECURITY</a></li>
                 <li><a href="#">FAQ</a></li>
+                <li><a href="signup.html">SIGNIN/LOGIN</a></li>
                 <li class="dropdown_main"><i class="fas fa-globe"></i> <span> EN <i class="fas fa-sort-down"></i></span>
                 </li>
             </ul>
