--- a/signup.html
+++ b/signup.html
@@ -3,25 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login & Sign Up</title>
+    <link rel="stylesheet" href="web.css">
 </head>
 <body>
-    <p class="insta-info">Sign up</p>
-                        <form>
-                            <div class="form-group">
-                                <input type="text" class="form-control" name="" placeholder="Mobile Number Or Email">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" name="" placeholder="Full Name">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" name="" placeholder="Username">
-                            </div>
-                            <div class="form-group">
-                                <input type="password" class="form-control" name="" placeholder="Password">
-                            </div>
-                            <button type="submit" class="btn btn-primary btn-block"> Sign up</button>
-                        </form>
-                        <p class="terms-text">By Signing up, you agree to our <b>Terms</b>,<b>Data Policy</b> and<b>Cookies policy</b>.</p>
+    <div class="container">
+        <!-- Login Form -->
+        <div class="form-container login-container">
+            <form action="#" method="post">
+                <h2>Login</h2>
+                <input type="text" placeholder="Username" required />
+                <input type="password" placeholder="Password" required />
+                <button type="submit">Login</button>
+                <p>Don't have an account? <a href="#signup" onclick="showSignUp()">Sign Up</a></p>
+            </form>
+        </div>
+
+        <!-- Sign Up Form -->
+        <div class="form-container sign-up-container">
+            <form action="#" method="post">
+                <h2>Sign Up</h2>
+                <input type="text" placeholder="Username" required />
+                <input type="email" placeholder="Email" required />
+                <input type="password" placeholder="Password" required />
+                <button type="submit">Sign Up</button>
+                <p>Already have an account? <a href="#login" onclick="showLogin()">Login</a></p>
+            </form>
+        </div>
+    </div>
+
+    <script>
+        function showSignUp() {
+            document.querySelector('.login-container').style.display = 'none';
+            document.querySelector('.sign-up-container').style.display = 'block';
+        }
+
+        function showLogin() {
+            document.querySelector('.login-container').style.display = 'block';
+            document.querySelector('.sign-up-container').style.display = 'none';
+        }
+    </script>
 </body>
 </html>
